--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": ["standard"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ferreira-leonardo/clean-arq-node-api.git"
@@ -17,6 +20,7 @@
   },
   "homepage": "https://github.com/ferreira-leonardo/clean-arq-node-api#readme",
   "devDependencies": {
+    "lint-staged": "^15.2.0",
     "standard": "^17.1.0"
   }
 }
