--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API using clean architecture and unit test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
