--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "API using clean architecture and unit test",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
-      "standard --fix"
+      "standard --fix",
+      "git add"
     ]
   },
   "husky": {
@@ -20,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "standard": "^17.1.0"
   }
