--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "standard": "^17.1.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   }
 }
