Ensure LoginRouter 400 if no email is provided

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "prepare": "husky install",
     "test": "jest"
   },
+  "standard": {
+    "env": ["jest"]
+  },
   "author": "Leonardo Ferreira",
   "license": "MIT",
   "devDependencies": {
